--- a/hackathons-discord.html
+++ b/hackathons-discord.html
@@ -1079,11 +1079,11 @@ document.addEventListener("DOMContentLoaded", () => {
                                     <i class="fas fa-university text-xl"></i>
                                     <span class="text-xs mt-1 text-center">Panther Connect</span>
                                 </a>
-                                <a href="https://codecrunchglobal.vercel.app/community-access.html" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <a href="https://hackuniversity-discord.vercel.app/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fab fa-discord text-xl"></i>
                                     <span class="text-xs mt-1">Discord</span>
                                 </a>
-                                <a href="https://codecrunchglobal.vercel.app/community-access.html" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <a href="https://hackuniversity-discord.vercel.app/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fas fa-users text-xl"></i>
                                     <span class="text-xs mt-1">GroupMe</span>
                                 </a>
@@ -1091,7 +1091,7 @@ document.addEventListener("DOMContentLoaded", () => {
                                     <i class="fas fa-video text-xl"></i>
                                     <span class="text-xs mt-1">Zoom</span>
                                 </a>
-                                <a href="https://hackuniversity-directory.vercel.app/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <a href="https://hackuniversity-calendar.vercel.app/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="far fa-calendar-alt text-xl"></i>
                                     <span class="text-xs mt-1 text-center">Hack University Calendar</span>
                                 </a>
@@ -1103,7 +1103,7 @@ document.addEventListener("DOMContentLoaded", () => {
                                     <i class="fas fa-book text-xl"></i>
                                     <span class="text-xs mt-1 text-center">Course Schedule</span>
                                 </a> -->
-                                <a href="https://docs.google.com/forms/d/e/1FAIpQLScOA6IBnLxnxEnk-BOaXYyPXpJ3dU6Cu4OOrPJ7ErOgKvIdEQ/viewform?usp=dialog" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <a href="https://hackuniversityattendance.vercel.app/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fas fa-clipboard-check text-xl"></i>
                                     <span class="text-xs mt-1">Hack University Attendance</span>
                                 </a>
@@ -1116,11 +1116,11 @@ document.addEventListener("DOMContentLoaded", () => {
                             <li><a href="https://codecrunchglobal.vercel.app/hackathons-discord.html#mission" class="text-sm opacity-80 hover:opacity-100">Mission</a></li>
                             <li><a href="https://codecrunchglobal.vercel.app/index.html#events" class="text-sm opacity-80 hover:opacity-100">Events</a></li>
                             <li><a href="https://ba-00001.github.io/codecrunchclub/hackathons.html" class="text-sm opacity-80 hover:opacity-100">Hackathons</a></li>
-                            <li><a href="https://codecrunchglobal.vercel.app/community-access.html" class="text-sm opacity-80 hover:opacity-100">Membership</a></li>
-                            <li><a href="#" class="text-sm opacity-80 hover:opacity-100">Join E-Board</a></li>
+                            <li><a href="https://hackuniversity-membership.vercel.app/" class="text-sm opacity-80 hover:opacity-100">Membership</a></li>
+                            <li><a href="https://hackuniversity-eboard.vercel.app/" class="text-sm opacity-80 hover:opacity-100">Join E-Board</a></li>
                             <li><a href="https://codecrunchglobal.vercel.app/index.html#resources" class="text-sm opacity-80 hover:opacity-100">Resources</a></li>
-                            <li><a href="https://codecrunchglobal.vercel.app/index.html#connect" class="text-sm opacity-80 hover:opacity-100">Connect</a></li>
-                            <li><a href="https://codecrunchglobal.vercel.app/community-access.html" target="_blank" rel="noopener noreferrer" class="text-sm opacity-80 hover:opacity-100">Join Discord</a></li>
+                            <li><a href="https://hackuniversity-directory.vercel.app/" class="text-sm opacity-80 hover:opacity-100">Connect</a></li>
+                            <li><a href="https://hackuniversity-discord.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-sm opacity-80 hover:opacity-100">Join Discord</a></li>
                         </ul>
                     </div>
                     <div>
