--- a/hackathons-discord.html
+++ b/hackathons-discord.html
@@ -1114,8 +1114,8 @@ document.addEventListener("DOMContentLoaded", () => {
                         <h3 class="text-lg font-bold mb-4">Quick Links</h3>
                         <ul class="space-y-2">
                             <li><a href="https://codecrunchglobal.vercel.app/hackathons-discord.html#mission" class="text-sm opacity-80 hover:opacity-100">Mission</a></li>
-                            <li><a href="https://codecrunchglobal.vercel.app/index.html#events" class="text-sm opacity-80 hover:opacity-100">Events</a></li>
-                            <li><a href="https://ba-00001.github.io/codecrunchclub/hackathons.html" class="text-sm opacity-80 hover:opacity-100">Hackathons</a></li>
+                            <li><a href="https://hackuniversity-calendar.vercel.app/" class="text-sm opacity-80 hover:opacity-100">Events</a></li>
+                            <li><a href="https://codecrunchglobal.vercel.app/hackathons.html" class="text-sm opacity-80 hover:opacity-100">Hackathons</a></li>
                             <li><a href="https://hackuniversity-membership.vercel.app/" class="text-sm opacity-80 hover:opacity-100">Membership</a></li>
                             <li><a href="https://hackuniversity-eboard.vercel.app/" class="text-sm opacity-80 hover:opacity-100">Join E-Board</a></li>
                             <li><a href="https://codecrunchglobal.vercel.app/index.html#resources" class="text-sm opacity-80 hover:opacity-100">Resources</a></li>
@@ -1134,7 +1134,7 @@ document.addEventListener("DOMContentLoaded", () => {
                 </div>
                 <div class="mt-8 pt-8 border-t border-white/20 text-center">
                     <p class="text-sm opacity-80">
-                        © <script>document.write(new Date().getFullYear())</script> Code Crunch. All rights reserved.
+                        © <script>document.write(new Date().getFullYear())</script> Hack University. All rights reserved.
                     </p>
                     <p style="font-size: 0.8rem; opacity: 0.6; margin-top: 1rem;">
                         Built with ❤️ for the tech community by <a href="https://www.linkedin.com/in/iba001/" target="_blank" style="color: #4ecdc4; text-decoration: none; font-weight: 600; transition: all 0.3s ease;">Brian Bazurto</a> | Powered by innovation and collaboration
