--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -60,11 +60,11 @@
                 <div class="text-center">
                     <h3 class="text-2xl font-bold text-white mb-4">For Students</h3>
                     <div class="flex flex-col gap-3">
-                        <a href="https://hackuniversity-wiki.vercel.app" target="_blank" class="btn-primary text-white px-6 py-3 rounded-full font-bold text-base transition-all duration-300 text-decoration-none hover:opacity-90 inline-block">
+                        <a href="https://infoflyers.vercel.app" target="_blank" class="btn-primary text-white px-6 py-3 rounded-full font-bold text-base transition-all duration-300 text-decoration-none hover:opacity-90 inline-block">
                             Hack University Wiki
                         </a>
-                        <a href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank" class="btn-primary text-white px-6 py-3 rounded-full font-bold text-base transition-all duration-300 text-decoration-none hover:opacity-90 inline-block">
-                            Hackathons
+                        <a href="https://codecrunchglobal.vercel.app/hackathons-wiki" target="_blank" class="btn-primary text-white px-6 py-3 rounded-full font-bold text-base transition-all duration-300 text-decoration-none hover:opacity-90 inline-block">
+                            Hackathons [HACKER GUIDE]
                         </a>
                     </div>
                 </div>
@@ -73,10 +73,10 @@
                 <div class="text-center">
                     <h3 class="text-2xl font-bold text-white mb-4">For Companies</h3>
                     <div class="flex flex-col gap-3">
-                        <a href="https://hackuniversity-sponsors.vercel.app" target="_blank" class="btn-primary text-white px-6 py-3 rounded-full font-bold text-base transition-all duration-300 text-decoration-none hover:opacity-90 inline-block">
+                        <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate" target="_blank" class="btn-primary text-white px-6 py-3 rounded-full font-bold text-base transition-all duration-300 text-decoration-none hover:opacity-90 inline-block">
                             Sponsor Us
                         </a>
-                        <a href="https://hackuniversity-events.vercel.app" target="_blank" class="btn-primary text-white px-6 py-3 rounded-full font-bold text-base transition-all duration-300 text-decoration-none hover:opacity-90 inline-block">
+                        <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate" target="_blank" class="btn-primary text-white px-6 py-3 rounded-full font-bold text-base transition-all duration-300 text-decoration-none hover:opacity-90 inline-block">
                             Host an Event
                         </a>
                     </div>
@@ -86,10 +86,10 @@
                 <div class="text-center">
                     <h3 class="text-2xl font-bold text-white mb-4">For Industry Professionals</h3>
                     <div class="flex flex-col gap-3">
-                        <a href="https://hackuniversity-donate.vercel.app" target="_blank" class="btn-primary text-white px-6 py-3 rounded-full font-bold text-base transition-all duration-300 text-decoration-none hover:opacity-90 inline-block">
+                        <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate" target="_blank" class="btn-primary text-white px-6 py-3 rounded-full font-bold text-base transition-all duration-300 text-decoration-none hover:opacity-90 inline-block">
                             Donate
                         </a>
-                        <a href="https://hackuniversity-volunteer.vercel.app" target="_blank" class="btn-primary text-white px-6 py-3 rounded-full font-bold text-base transition-all duration-300 text-decoration-none hover:opacity-90 inline-block">
+                        <a href="https://codecrunchglobal.vercel.app/hackathonvolunteer-wiki.html" target="_blank" class="btn-primary text-white px-6 py-3 rounded-full font-bold text-base transition-all duration-300 text-decoration-none hover:opacity-90 inline-block">
                             Volunteer
                         </a>
                     </div>
