--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -96,15 +96,15 @@
                 </div>
             </div>
 
-            <!-- Partner Organizations -->
+<!-- Partner Organizations -->
             <div class="max-w-5xl mx-auto">
                 <h2 class="text-2xl md:text-3xl font-bold text-white mb-8">Connect with Our Partner Organizations</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                     
                     <!-- Google Developer Club at FIU -->
-                    <a href="https://gdgcloud.com" target="_blank" class="bg-white/10 backdrop-blur-sm rounded-xl p-6 text-white hover:bg-white/20 card-hover text-decoration-none">
+                    <a href="https://gdgatfiu.vercel.app" target="_blank" class="bg-white/10 backdrop-blur-sm rounded-xl p-6 text-white hover:bg-white/20 card-hover text-decoration-none">
                         <div class="mb-4 flex justify-center">
-                            <img src="https://gdg-logo.vercel.app" alt="Google Developer Club Logo" class="h-16 w-auto object-contain">
+                            <img src="https://github-production-user-asset-6210df.s3.amazonaws.com/124537281/481143144-f62d5d75-d45f-4c01-b444-1c99a4031e27.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20250906%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250906T034838Z&X-Amz-Expires=300&X-Amz-Signature=0708af6cbb3606153331b3f76d9459b31ccaef06bbbd0a353408b9eec286c251&X-Amz-SignedHeaders=host" alt="Google Developer Club Logo" class="h-16 w-auto object-contain">
                         </div>
                         <h3 class="text-xl font-bold mb-2">Google Developer Club</h3>
                         <p class="text-white/80 text-sm">at Florida International University</p>
@@ -113,34 +113,34 @@
                     <!-- Code Crunch Global -->
                     <a href="https://codecrunchglobal.vercel.app" target="_blank" class="bg-white/10 backdrop-blur-sm rounded-xl p-6 text-white hover:bg-white/20 card-hover text-decoration-none">
                         <div class="mb-4 flex justify-center">
-                            <img src="https://codecrunch-logo.vercel.app" alt="Code Crunch Global Logo" class="h-16 w-auto object-contain">
+                            <img src="https://github-production-user-asset-6210df.s3.amazonaws.com/124537281/449573483-5e2a6622-9702-438f-bb6b-25d8e894839e.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20250906%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250906T034802Z&X-Amz-Expires=300&X-Amz-Signature=cd83e5143b259f814490b19cfd135aba4018148f94c5ecb06dcc20ab68332c8d&X-Amz-SignedHeaders=host" alt="Code Crunch Global Logo" class="h-16 w-auto object-contain">
                         </div>
                         <h3 class="text-xl font-bold mb-2">Code Crunch Global</h3>
                         <p class="text-white/80 text-sm">Global coding community</p>
                     </a>
 
                     <!-- ColorStack at FIU -->
-                    <a href="https://colorstack.org" target="_blank" class="bg-white/10 backdrop-blur-sm rounded-xl p-6 text-white hover:bg-white/20 card-hover text-decoration-none">
+                    <a href="https://colorstackatfiu.vercel.app" target="_blank" class="bg-white/10 backdrop-blur-sm rounded-xl p-6 text-white hover:bg-white/20 card-hover text-decoration-none">
                         <div class="mb-4 flex justify-center">
-                            <img src="https://colorstack-logo.vercel.app" alt="ColorStack Logo" class="h-16 w-auto object-contain">
+                            <img src="https://github-production-user-asset-6210df.s3.amazonaws.com/124537281/433675962-0e2f3b36-a64a-4b73-bd28-e919853a4036.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20250906%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250906T034740Z&X-Amz-Expires=300&X-Amz-Signature=81fe330d319c2b91556cf1cd5dafeca29d8190c670905e86d6457f377074cc60&X-Amz-SignedHeaders=host" alt="ColorStack Logo" class="h-16 w-auto object-contain">
                         </div>
                         <h3 class="text-xl font-bold mb-2">ColorStack</h3>
                         <p class="text-white/80 text-sm">at Florida International University</p>
                     </a>
 
                     <!-- CAHSI at FIU -->
-                    <a href="https://cahsi.utep.edu" target="_blank" class="bg-white/10 backdrop-blur-sm rounded-xl p-6 text-white hover:bg-white/20 card-hover text-decoration-none lg:col-span-1 lg:col-start-2">
+                    <a href="https://cahsiatfiu.vercel.app" target="_blank" class="bg-white/10 backdrop-blur-sm rounded-xl p-6 text-white hover:bg-white/20 card-hover text-decoration-none lg:col-span-1 lg:col-start-2">
                         <div class="mb-4 flex justify-center">
-                            <img src="https://cahsi-logo.vercel.app" alt="CAHSI Logo" class="h-16 w-auto object-contain">
+                            <img src="https://github-production-user-asset-6210df.s3.amazonaws.com/124537281/485513386-0c9b5533-3b83-4f27-99ef-67185a345355.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20250906%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250906T034655Z&X-Amz-Expires=300&X-Amz-Signature=2b29da95576ccb632eba5f6d654b74cd8efa11c93087a2a71ec5519c13a8bc49&X-Amz-SignedHeaders=host" alt="CAHSI Logo" class="h-16 w-auto object-contain">
                         </div>
                         <h3 class="text-xl font-bold mb-2">CAHSI</h3>
                         <p class="text-white/80 text-sm">at Florida International University</p>
                     </a>
 
                     <!-- Raspberry Pi Code Crunch -->
-                    <a href="https://www.raspberrypi.org" target="_blank" class="bg-white/10 backdrop-blur-sm rounded-xl p-6 text-white hover:bg-white/20 card-hover text-decoration-none lg:col-span-1">
+                    <a href="https://www.raspberrypicodecrunch.vercel.app" target="_blank" class="bg-white/10 backdrop-blur-sm rounded-xl p-6 text-white hover:bg-white/20 card-hover text-decoration-none lg:col-span-1">
                         <div class="mb-4 flex justify-center">
-                            <img src="https://raspberrypi-logo.vercel.app" alt="Raspberry Pi Logo" class="h-16 w-auto object-contain">
+                            <img src="https://github-production-user-asset-6210df.s3.amazonaws.com/124537281/481779633-1eaf8425-7b4b-4035-a84b-b9b0ed28c52c.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20250906%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250906T034921Z&X-Amz-Expires=300&X-Amz-Signature=dd6a0959ce9e857bff4df7e88f7eb50e5051dfe72783e5077d3e1b695c10b404&X-Amz-SignedHeaders=host" alt="Raspberry Pi Logo" class="h-16 w-auto object-contain">
                         </div>
                         <h3 class="text-xl font-bold mb-2">Raspberry Pi</h3>
                         <p class="text-white/80 text-sm">Code Crunch Community</p>
@@ -149,6 +149,7 @@
             </div>
         </div>
     </div>
+
 
     <!-- Stats Section -->
     <div class="py-20 bg-white">
