--- a/hackuniversity copy.html
+++ b/hackuniversity copy.html
@@ -221,7 +221,7 @@
                     <a href="https://gdgatfiu.vercel.app" target="_blank" 
                        class="bg-white/10 backdrop-blur-sm rounded-xl p-4 md:p-6 text-white hover:bg-white/20 card-hover text-decoration-none touch-target focus-visible will-change-transform backface-hidden">
                         <div class="mb-3 md:mb-4 flex justify-center">
-                            <img src="https://github-production-user-asset-6210df.s3.amazonaws.com/124537281/481143144-f62d5d75-d45f-4c01-b444-1c99a4031e27.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20250906%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250906T034838Z&X-Amz-Expires=300&X-Amz-Signature=0708af6cbb3606153331b3f76d9459b31ccaef06bbbd0a353408b9eec286c251&X-Amz-SignedHeaders=host" 
+                            <img src="https://github.com/user-attachments/assets/f62d5d75-d45f-4c01-b444-1c99a4031e27" 
                                  alt="Google Developer Club Logo" class="partner-logo h-12 md:h-16 w-auto object-contain" loading="lazy">
                         </div>
                         <h3 class="text-lg md:text-xl font-bold mb-1 md:mb-2">Google Developer Club</h3>
@@ -232,7 +232,7 @@
                     <a href="https://codecrunchglobal.vercel.app" target="_blank" 
                        class="bg-white/10 backdrop-blur-sm rounded-xl p-4 md:p-6 text-white hover:bg-white/20 card-hover text-decoration-none touch-target focus-visible will-change-transform backface-hidden">
                         <div class="mb-3 md:mb-4 flex justify-center">
-                            <img src="https://github-production-user-asset-6210df.s3.amazonaws.com/124537281/449573483-5e2a6622-9702-438f-bb6b-25d8e894839e.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20250906%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250906T034802Z&X-Amz-Expires=300&X-Amz-Signature=cd83e5143b259f814490b19cfd135aba4018148f94c5ecb06dcc20ab68332c8d&X-Amz-SignedHeaders=host" 
+                            <img src="https://github.com/user-attachments/assets/5e2a6622-9702-438f-bb6b-25d8e894839e" 
                                  alt="Code Crunch Global Logo" class="partner-logo h-12 md:h-16 w-auto object-contain" loading="lazy">
                         </div>
                         <h3 class="text-lg md:text-xl font-bold mb-1 md:mb-2">Code Crunch Global</h3>
@@ -243,7 +243,7 @@
                     <a href="https://colorstackatfiu.vercel.app" target="_blank" 
                        class="bg-white/10 backdrop-blur-sm rounded-xl p-4 md:p-6 text-white hover:bg-white/20 card-hover text-decoration-none touch-target focus-visible will-change-transform backface-hidden">
                         <div class="mb-3 md:mb-4 flex justify-center">
-                            <img src="https://github-production-user-asset-6210df.s3.amazonaws.com/124537281/433675962-0e2f3b36-a64a-4b73-bd28-e919853a4036.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20250906%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250906T034740Z&X-Amz-Expires=300&X-Amz-Signature=81fe330d319c2b91556cf1cd5dafeca29d8190c670905e86d6457f377074cc60&X-Amz-SignedHeaders=host" 
+                            <img src="https://github.com/user-attachments/assets/0e2f3b36-a64a-4b73-bd28-e919853a4036" 
                                  alt="ColorStack Logo" class="partner-logo h-12 md:h-16 w-auto object-contain" loading="lazy">
                         </div>
                         <h3 class="text-lg md:text-xl font-bold mb-1 md:mb-2">ColorStack</h3>
@@ -254,7 +254,7 @@
                     <a href="https://cahsiatfiu.vercel.app" target="_blank" 
                        class="bg-white/10 backdrop-blur-sm rounded-xl p-4 md:p-6 text-white hover:bg-white/20 card-hover text-decoration-none touch-target focus-visible will-change-transform backface-hidden sm:col-span-2 lg:col-span-1 lg:col-start-2">
                         <div class="mb-3 md:mb-4 flex justify-center">
-                            <img src="https://github-production-user-asset-6210df.s3.amazonaws.com/124537281/485513386-0c9b5533-3b83-4f27-99ef-67185a345355.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20250906%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250906T034655Z&X-Amz-Expires=300&X-Amz-Signature=2b29da95576ccb632eba5f6d654b74cd8efa11c93087a2a71ec5519c13a8bc49&X-Amz-SignedHeaders=host" 
+                            <img src="https://github.com/user-attachments/assets/0c9b5533-3b83-4f27-99ef-67185a345355" 
                                  alt="CAHSI Logo" class="partner-logo h-12 md:h-16 w-auto object-contain" loading="lazy">
                         </div>
                         <h3 class="text-lg md:text-xl font-bold mb-1 md:mb-2">CAHSI</h3>
@@ -265,7 +265,7 @@
                     <a href="https://www.raspberrypicodecrunch.vercel.app" target="_blank" 
                        class="bg-white/10 backdrop-blur-sm rounded-xl p-4 md:p-6 text-white hover:bg-white/20 card-hover text-decoration-none touch-target focus-visible will-change-transform backface-hidden sm:col-span-2 lg:col-span-1">
                         <div class="mb-3 md:mb-4 flex justify-center">
-                            <img src="https://github-production-user-asset-6210df.s3.amazonaws.com/124537281/481779633-1eaf8425-7b4b-4035-a84b-b9b0ed28c52c.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20250906%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250906T034921Z&X-Amz-Expires=300&X-Amz-Signature=dd6a0959ce9e857bff4df7e88f7eb50e5051dfe72783e5077d3e1b695c10b404&X-Amz-SignedHeaders=host" 
+                            <img src="https://github.com/user-attachments/assets/1eaf8425-7b4b-4035-a84b-b9b0ed28c52c" 
                                  alt="Raspberry Pi Logo" class="partner-logo h-12 md:h-16 w-auto object-contain" loading="lazy">
                         </div>
                         <h3 class="text-lg md:text-xl font-bold mb-1 md:mb-2">Raspberry Pi</h3>
