--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -174,7 +174,7 @@
                            class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
                             Hack University Wiki
                         </a>
-                        <a href="https://codecrunchglobal.vercel.app/hackathons-wiki" target="_blank" 
+                        <a href="https://codecrunchglobal.vercel.app/hackathons-wiki.html" target="_blank" 
                            class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
                             Hackathons [HACKER GUIDE]
                         </a>
@@ -185,11 +185,11 @@
                 <div class="text-center flex-1 max-w-xs mx-auto lg:max-w-none">
                     <h3 class="text-xl md:text-2xl font-bold text-white mb-3 md:mb-4">For Companies</h3>
                     <div class="flex flex-col gap-3 space-y-2">
-                        <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate" target="_blank" 
+                        <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate.html" target="_blank" 
                            class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
                             Sponsor Us
                         </a>
-                        <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate" target="_blank" 
+                        <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate.html" target="_blank" 
                            class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
                             Host an Event
                         </a>
@@ -200,7 +200,7 @@
                 <div class="text-center flex-1 max-w-xs mx-auto lg:max-w-none">
                     <h3 class="text-xl md:text-2xl font-bold text-white mb-3 md:mb-4">For Industry Professionals</h3>
                     <div class="flex flex-col gap-3 space-y-2">
-                        <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate" target="_blank" 
+                        <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate.html" target="_blank" 
                            class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
                             Donate
                         </a>
@@ -274,6 +274,7 @@
                 </div>
             </div>
         </div>
+     
     </section>
 
 
