--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -158,7 +158,7 @@
         <div class="relative z-10 text-center px-4 max-w-6xl mx-auto">
             <!-- Main Title -->
             <h1 class="hero-title text-4xl sm:text-5xl md:text-7xl lg:text-8xl font-bold text-white mb-4 md:mb-6">
-                Hack University <span class="star">👨🏽‍💻👩🏽‍💻</span>
+                Hack University <span class="star">👨🏻‍💻 👨🏼‍💻 👨🏽‍💻 👨🏾‍💻 👨🏿‍💻👩🏻‍💻 👩🏼‍💻 👩🏽‍💻 👩🏾‍💻 👩🏿‍💻🧑🏻‍💻 🧑🏼‍💻 🧑🏽‍💻 🧑🏾‍💻 🧑🏿‍💻</span>
             </h1>
             <p class="hero-subtitle text-base sm:text-lg md:text-xl lg:text-2xl text-white/90 mb-8 md:mb-12 max-w-4xl mx-auto leading-relaxed">
                 Empowering the next generation of innovators, developers, and leaders through collaborative learning and cutting-edge technology
@@ -320,7 +320,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid md:grid-cols-3 gap-6 md:gap-8">
                 <div>
-                    <h3 class="text-lg font-bold mb-4">Hack University <span class="star">👨🏽‍💻👩🏽‍💻</span></h3>
+                    <h3 class="text-lg font-bold mb-4">Hack University <span class="star">👨🏻‍💻 👨🏼‍💻 👨🏽‍💻 👨🏾‍💻 👨🏿‍💻👩🏻‍💻 👩🏼‍💻 👩🏽‍💻 👩🏾‍💻 👩🏿‍💻🧑🏻‍💻 🧑🏼‍💻 🧑🏽‍💻 🧑🏾‍💻 🧑🏿‍💻</span></h3>
                     <p class="text-sm opacity-80 mb-4">
                         A collaborative effort uniting multiple student organizations and global communities with a mission to empower the next generation of innovators, developers, and leaders. 
                     </p>
