--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -160,12 +160,12 @@
             <h1 class="hero-title text-4xl sm:text-5xl md:text-7xl lg:text-8xl font-bold text-white mb-4 md:mb-6">
                 Hack University 
             </h1>
-
-            <h2><span class="star">👨🏻‍💻 👨🏼‍💻 👨🏽‍💻 👨🏾‍💻 👨🏿‍💻👩🏻‍💻 👩🏼‍💻 👩🏽‍💻 👩🏾‍💻 👩🏿‍💻🧑🏻‍💻 🧑🏼‍💻 🧑🏽‍💻 🧑🏾‍💻 🧑🏿‍💻</span></h2>
+            <h1 class="hero-title text-4xl sm:text-5xl md:text-7xl lg:text-8xl font-bold text-white mb-4 md:mb-6">
+                 <span class="star">👨🏻‍💻 👨🏼‍💻 👨🏽‍💻 👨🏾‍💻 👨🏿‍💻👩🏻‍💻 👩🏼‍💻 👩🏽‍💻 👩🏾‍💻 👩🏿‍💻🧑🏻‍💻 🧑🏼‍💻 🧑🏽‍💻 🧑🏾‍💻 </span>
+            </h1>
             <p class="hero-subtitle text-base sm:text-lg md:text-xl lg:text-2xl text-white/90 mb-8 md:mb-12 max-w-4xl mx-auto leading-relaxed">
                 Empowering the next generation of innovators, developers, and leaders through collaborative learning and cutting-edge technology
             </p>
-         
 
             <!-- CTA Buttons -->
             <div class="cta-section flex flex-col lg:flex-row gap-6 lg:gap-8 justify-center items-stretch lg:items-start mb-12 md:mb-16">
