--- a/hackathons-wiki.html
+++ b/hackathons-wiki.html
@@ -1030,7 +1030,7 @@ body::before {
                     <!-- Main Navigation -->
                     <li class="nav-section-title">MAIN NAVIGATION</li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://Hacks-at-fiu.vercel.app" target="_blank">
+                        <a class="nav-link" href="https://Hackuniversity-discord.vercel.app" target="_blank">
                             <i class="bi bi-shield-check"></i>
                             <span>Hack University Hacker Guide</span>
                         </a>
@@ -1510,8 +1510,8 @@ document.addEventListener('visibilitychange', function() {
                         <div class="checklist-number">1</div>
                         <div class="checklist-text">
                             <strong>Review the Hacker Guide</strong> - Essential preparation and guidelines for all hackathons.<br>
-                            <a href="#hacker-guide-section" class="checklist-link" target="_blank">
-                                <i class="bi bi-shield-check"></i> Hacks-at-fiu.vercel.app
+                            <a href="https://Hackuniversity-discord.vercel.app" class="checklist-link" target="_blank">
+                                <i class="bi bi-shield-check"></i> Hackuniversity-registration.vercel.app.app
                             </a>
                         </div>
                     </li>
