--- a/HACK-5-305-HACK-FALL2025.html
+++ b/HACK-5-305-HACK-FALL2025.html
@@ -3396,16 +3396,30 @@ body {
                     <div class="role-icon">
                         <i class="fas fa-city"></i>
                     </div>
-                    <h3 class="role-title">Hacker</h3>
+
+                 <div class="eligibility-info mb-3">
+                <p class="text-center"><strong>🌍 Worldwide All Universities | All Majors | Age 16+</strong></p>
+                <p class="text-center text-muted"><small><strong>Exception:</strong> If you are under 18, you may join but must have <strong>parent or guardian permission</strong> and they must be around during the event.</small></p>
+                </div>
+
+
+
+                    <h3 class="role-title">🎯 Hacker - Student</h3>
                     <p class="role-description">Join as a participant to build innovative smart city solutions, collaborate with interdisciplinary teams, learn cutting-edge technologies, and compete for prizes. Perfect for students from all majors who want to shape urban futures.</p>
                     <a href="#participate" class="btn btn-custom d-block">🏗️ Register Now </a>
                     <p></p>
-                    <a href="https://hacksatfiu.vercel.app/" class="btn btn-custom d-block">🏗️ Hacker Guide </a>
+                    <a href="https://hacksatfiu.vercel.app/" class="btn btn-custom d-block">📚 Hacker Guide </a>
                     <p></p>
-                    <a href="https://305hackfall2025-devpost.vercel.app/" class="btn btn-custom d-block">Devpost - Submission Portal </a>
+                    <a href="https://305hackfall2025-devpost.vercel.app/" class="btn btn-custom d-block">🚀 Devpost - Submission Portal </a>
                 </div>
             </div>
             
+
+       
+
+
+
+
             <div class="col-md-6 mb-4">
                 <div class="role-card volunteer p-4">
                     <div class="role-icon">
