--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -181,9 +181,14 @@
                            class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
                             Hackathons [HACKER GUIDE]
                         </a>
+                            <a href="http://hackuniversitycalendar.vercel.app/" target="_blank" 
+                           class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
+                            Hack University Calendar
+                        </a>
                     </div>
                 </div>
                 
+
                 <!-- For Companies -->
                 <div class="text-center flex-1 max-w-xs mx-auto lg:max-w-none">
                     <h3 class="text-xl md:text-2xl font-bold text-white mb-3 md:mb-4">For Companies</h3>
@@ -207,9 +212,14 @@
                            class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
                             Donate
                         </a>
+
                         <a href="https://codecrunchglobal.vercel.app/hackathonvolunteer-wiki.html" target="_blank" 
                            class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
                             Volunteer
+                        </a>
+                        <a href="https://codecrunchvolunteerform-no6.vercel.app/" target="_blank" 
+                           class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
+                            Fundraising Advisory Board
                         </a>
                     </div>
                 </div>
