--- a/HACK-5-305-HACK-FALL2025.html
+++ b/HACK-5-305-HACK-FALL2025.html
@@ -3435,6 +3435,7 @@ body {
 
                 <div class="d-flex flex-column gap-3">
                     <a href="https://Hackuniversity-discord.vercel.app/" class="btn btn-custom btn-hover-with-url" title="Register Now - Hackuniversity-Registration.vercel.app">🏗️ Register Now</a>
+                    <a href="https://305hackfall2025gdgatfiu.vercel.app/" class="btn btn-custom btn-hover-with-url" title="Hacker Guide - HackUniversity-HackerGuide.vercel.app">📅 Hack Agenda</a>
                     <a href="https://HackUniversity-HackerGuide.vercel.app/" class="btn btn-custom btn-hover-with-url" title="Hacker Guide - HackUniversity-HackerGuide.vercel.app">📚 Hacker Guide</a>
                     <a href="https://305hackfall2025-devpost.vercel.app/" class="btn btn-custom btn-hover-with-url" title="Submit your project - 305HackFall2025-Devpost.vercel.app">🚀 Devpost - Submission Portal</a>
                 </div>
