--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -167,26 +167,32 @@
                 Empowering the next generation of innovators, developers, and leaders through collaborative learning and cutting-edge technology
             </p>
 
-            <!-- CTA Buttons -->
-            <div class="cta-section flex flex-col lg:flex-row gap-6 lg:gap-8 justify-center items-stretch lg:items-start mb-12 md:mb-16">
-                <!-- For Students Section -->
-                <div class="text-center flex-1 max-w-xs mx-auto lg:max-w-none">
-                    <h3 class="text-xl md:text-2xl font-bold text-white mb-3 md:mb-4">For Students</h3>
-                    <div class="flex flex-col gap-3 space-y-2">
-                        <a href="https://infoflyers.vercel.app" target="_blank" 
-                           class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
-                            Hack University Wiki
-                        </a>
-                        <a href="https://codecrunchglobal.vercel.app/hackathons-wiki.html" target="_blank" 
-                           class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
-                            Hackathons [HACKER GUIDE]
-                        </a>
-                            <a href="http://hackuniversitycalendar.vercel.app/" target="_blank" 
-                           class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
-                            Hack University Calendar
-                        </a>
-                    </div>
-                </div>
+   <!-- CTA Buttons -->
+<div class="cta-section flex flex-col lg:flex-row gap-6 lg:gap-8 justify-center items-stretch lg:items-start mb-12 md:mb-16">
+    <!-- For Students Section -->
+    <div class="text-center flex-1 max-w-xs mx-auto lg:max-w-none">
+        <h3 class="text-xl md:text-2xl font-bold text-white mb-3 md:mb-4">For Students</h3>
+
+        <!-- Short Description -->
+        <p class="text-white/90 text-sm md:text-base mb-4 leading-relaxed">
+            Do it all with Hack University OneStop Form: Membership, Register to Hacks, Volunteer, or Apply to the EBoard - One form to access all Hack University orgs!
+        </p>
+
+        <div class="flex flex-col gap-3 space-y-2">
+            <a href="https://infoflyers.vercel.app" target="_blank" 
+               class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
+                Hack University Wiki <br>[Membership, Events, Resources] <br> Students 13+ 
+            </a>
+            <a href="https://codecrunchglobal.vercel.app/hackathons-wiki.html" target="_blank" 
+               class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
+                Hackathons <br>[Registration & HACKER GUIDE] <br> Students 16+ 
+            </a>
+            <a href="http://hackuniversitycalendar.vercel.app/" target="_blank" 
+               class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
+                Hack University Calendar <br> Students 13+ 
+            </a>
+        </div>
+    </div>
                 
 
                 <!-- For Companies -->
