--- a/hackuniversitydonate.html
+++ b/hackuniversitydonate.html
@@ -908,6 +908,24 @@
             <h1>Hack University</h1>
             <p class="subtitle">Empowering students from high schools to universities with the tools, mentorship, and opportunities to excel in technology</p>
             
+
+
+            <a href="https://ba-00001.github.io/codecrunchclub/cc-prospectus.html" 
+            class="btn btn-primary" 
+            target="_blank" 
+            style="margin: 20px;">
+                📊 View Hackathon Prospectus
+            </a>
+
+            <a href="https://www.linkedin.com/company/code-crunch-club" 
+            class="btn btn-secondary" 
+            target="_blank" 
+            style="margin: 20px;">
+                💬 Message Us on LinkedIn
+            </a>
+
+
+
             <!-- Hackathon Events Section -->
             <div class="hackathon-section" id="events">
                 <h2>🎯 Events We're Fundraising For</h2>
