--- a/HACK-5-305-HACK-FALL2025.html
+++ b/HACK-5-305-HACK-FALL2025.html
@@ -3376,8 +3376,8 @@ body {
     
     <div class="hero-content">
         <h1 class="hero-title"><span class="hackathon-name">305 Hackathon Fall 2025</span> <span class="text-accent hackathon-year">2025</span></h1>
-        <p class="hero-subtitle"></p>September 19–21, 2025</p>
-
+        <h3 >September 19–21, 2025 | In-person Only</h3>
+       
         <!-- Location Information -->
         <div class="location-info">
             <div class="location-container">
