--- a/community-access.html
+++ b/community-access.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://hackuniversitydiscord.vercel.app/">
+<meta http-equiv="refresh" content="0; url=https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html">
 </head>
 <body></body>
 </html>
