--- a/hackuniversity-onestopform.html
+++ b/hackuniversity-onestopform.html
@@ -168,7 +168,7 @@
 
         <div class="text-center">
           <a
-            href="hackuniversity-onestopform.vercel.app"
+            href="https://hackuniversity-onestopform.vercel.app/"
             class="inline-block w-full cc-orange cc-blue-text px-8 py-4 rounded-md hover:bg-yellow-400 transition-colors font-bold text-lg text-decoration-none"
             rel="noopener noreferrer"
            >
