--- a/hackathonvolunteer-wiki.html
+++ b/hackathonvolunteer-wiki.html
@@ -793,7 +793,7 @@
                 <div>
                     <h3>Contact</h3>
                     <div style="font-size: 14px; opacity: 0.8;">
-                        Florida International University<br>
+                        <!-- Florida International University<br> -->
                         Miami, FL<br>
                         <a href="mailto:codecrunchclub@gmail.com">codecrunchclub@gmail.com</a>
                     </div>
